tests/integration/security/egress_gateway_origination/testdata/sidecar-scope.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Sidecar
metadata:
  name: restrict-to-service-entry-namespace
spec:
  egress:
    - hosts:
        - "service/*"
        - "istio-system/*"
  outboundTrafficPolicy:
    mode: ALLOW_ANY
